<resources>
    <string name="app_name">Foodies</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="hello_explore_your_dream_food">Hello explore your dream food</string>
    <string name="food_delivery_app">Food Delivery app</string>
    <string name="full_name">Full Name</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="sign_in">sign in</string>
    <string name="register">Register</string>
    <string name="daily_meal">Daily Meal</string>
    <string name="favourite">Favourite</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="jaypadmani01_gmail_com">jaypadmani01@gmail.com</string>
    <string name="jay_padmani">JAY PADMANI</string>
    <string name="_10_00_23_00">10:00 - 23:00</string>
    <string name="product_name">Product name</string>
    <string name="_5_0">5.0</string>
    <string name="your_favourite_and_testy_food_is_here">Your Favourite and testy food is here!</string>
    <string name="view_more">View More</string>
    <string name="make_order">Make Order</string>
    <string name="my_cart">My Cart</string>
    <string name="hello_explore_your_dream_food_in_foodies_app">Hello, explore Your Dream Food in Foodies App</string>
    <string name="your_order_successfully">Your Order placed successfully</string>
</resources>